# AVProcess

./: CMakeLists.txt  README.md
include/: RGN_draw.h  mbmp.h  mrgb.h  yuv.h
include/wav/: wav.h  wav_util.h
src/: CMakeLists.txt  RGN_draw.c  mbmp.c  yuv.c
src/test/: 420sp.yuv  R.pcm  test.c
src/wav/: wav.c  wav_util.c
test/: CMakeLists.txt  a.pcm  aac_encode.c  bmp_test.c  pcm_to_wav.c  test.c  wav_util_test.c  yuv_test.c
